@@ -64,7 +64,11 @@ summary.default <-
 
 format.summaryDefault <- function(x, ...)
 {
-    xx <- if(is.numeric(x) || is.complex(x)) zapsmall(x) else x
+    xx <- x
+    if(is.numeric(x) || is.complex(x)) {
+      finite <- is.finite(x)
+      xx[finite] <- zapsmall(x[finite])
+    }
     class(xx) <- class(x)[-1]
     m <- match("NA's", names(x), 0)
     if(inherits(x, "Date") || inherits(x, "POSIXct")) {
@@ -78,7 +82,11 @@ format.summaryDefault <- function(x, ...)
 
 print.summaryDefault <- function(x, ...)
 {
-    xx <- if(is.numeric(x) || is.complex(x)) zapsmall(x) else x
+    xx <- x
+    if(is.numeric(x) || is.complex(x)) {
+      finite <- is.finite(x)
+      xx[finite] <- zapsmall(x[finite])
+    }
     class(xx) <- class(x)[-1] # for format
     m <- match("NA's", names(xx), 0)
     if(inherits(x, "Date") || inherits(x, "POSIXct")) {
